kubernetes/apps/default/lidarr-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-ingress
  namespace: default
spec:
  ports:
    - port: 8686
      targetPort: 8686
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: lidarr-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.168
    ports:
      - port: 8686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/group: Media

spec:
  rules:
    - host: lidarr.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lidarr-ingress
                port:
                  number: 8686
  tls:
    - hosts:
        - lidarr.${SECRET_DOMAIN}
      secretName: lidarr-tls
  ingressClassName: nginx
